# poolparty-statetracker

./: .gitignore  CONTRIBUTING.md  README.readthedocs.md  benchmark.json  pyproject.toml
.cursor/rules/: commit_message.mdc  initiate_plan.mdc
.github/workflows/: test.yml
latex/si/: example1+2.ipynb  example1.ipynb  si.tex
latex/talk/: 26.01.09_outline.md  26.01.12_outline.md
notebooks/: 25.12.28_scratch.ipynb  25.12.29_scratch.ipynb  25.12.30_mutagenize_orf.ipynb  25.12.30_scratch.ipynb  25.12.31_from_iupac_motif.ipynb  25.12.31_marker_multiscan_demo.ipynb  25.12.31_marker_scan.ipynb  25.12.31_replace_marker.ipynb  25.12.31_reverse_complement.ipynb  26.01.01_default_party_demo.ipynb  26.01.01_from_iupac_motif_case_demo.ipynb  26.01.02_fixed_operation_demo.ipynb  26.01.02_xml_markers_demo.ipynb  26.01.03_deletion_multiscan_demo.ipynb  26.01.03_mutagenize_scan_demo.ipynb  26.01.03_replacement_multiscan_demo.ipynb  26.01.03_scan_functions_demo.ipynb  26.01.03_shuffle_scan_demo.ipynb  26.01.03_subseq_scan_demo.ipynb  26.01.04_fixed_ops_demo.ipynb  26.01.04_jbk_xml_examples.ipynb  26.01.04_name_seqs_demo.ipynb  26.01.04_ops_container_demo.ipynb  26.01.04_state_ops_container_demo.ipynb  26.01.05_clear_seq_names_demo.ipynb  26.01.05_iter_order_demo.ipynb  26.01.05_seq_naming_demo.ipynb  26.01.05_seq_shuffle_region_demo.ipynb  26.01.06_deletion_scan_demo.ipynb  26.01.06_jbk_xml_examples.ipynb  26.01.06_ops_container_region_demo.ipynb  26.01.06_region_base_class_demo.ipynb  26.01.06_scan_ops_region_demo.ipynb  26.01.07_deletion_scan_demo.ipynb  26.01.07_insertion_scan_demo.ipynb  26.01.07_ops_container_methods_test.ipynb  26.01.07_shuffle_scan_demo.ipynb  26.01.08_clear_annotation_demo.ipynb  26.01.08_jbk_talk_mpra_example.ipynb  26.01.08_report_design_cards_demo.ipynb  (+29 more)
notebooks/legacy/: 26.01.02_xml_markers_demo.ipynb  26.01.03_shuffle_scan_demo.ipynb  26.01.04_ops_container_demo.ipynb  (+4 more)
poolparty/: .readthedocs.yaml  README.md  pyproject.toml
poolparty/docs/: api.rst  (+6 more)
prompts/: commit.md  plan.md  prompt_commit_message.md  prompt_initiate_plan.md  refactoring_recommendations.md
statecounter/: README.md
statetracker/: .readthedocs.yaml  README.md  pyproject.toml
(+315 files in other folders)
