[project]
name = "poolparty-workspace"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
    "nbclient>=0.10.4",
    "poolparty",
    "statetracker",
]

[tool.uv]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "nbconvert>=7.16.6",
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
benchmark = [
    "pytest-benchmark>=4.0",
    "memray>=1.10",
    "pyinstrument>=4.5",
    "line-profiler>=4.0",
]

[tool.uv.workspace]
members = ["poolparty", "statetracker"]

[tool.uv.sources]
poolparty = { workspace = true }
statetracker = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["poolparty/tests", "statetracker/tests"]
