[project]
name = "poolparty-workspace"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
    "nbclient>=0.10.4",
    "poolparty",
    "statetracker",
]

[tool.uv]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "nbconvert>=7.16.6",
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
benchmark = [
    "pytest-benchmark>=4.0",
    "memray>=1.10",
    "pyinstrument>=4.5",
    "line-profiler>=4.0",
]

[tool.uv.workspace]
members = ["poolparty", "statetracker"]

[tool.uv.sources]
poolparty = { workspace = true }
statetracker = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["poolparty/tests", "statetracker/tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    ".eggs",
    "notebooks",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without explicit strict parameter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # Allow assert False in tests
"**/__init__.py" = ["F401"]  # Allow unused imports in __init__.py
